--- a/style.css
+++ b/style.css
@@ -6,25 +6,53 @@
 
 #ter{
     margin: 60px auto;
-    z-index: 3;
 width: 17%;
 height:300px ;
 border: 2px solid black;
 border-radius: 10px;
-background-color: antiquewhite;
-position: relative;
 }
-/* .check{
-    width:68% ;
-    height: 120px;
-    z-index: 2;
+
+.karta{
+    width: 150px;
+    height:100px ;
+    margin: 90px auto;
+}
+.post{ 
+
+    
+    transform: translateY(-130px);
+   transition: 3s;
+}
+.karta img{
+transform: rotate(90deg);
+width: 100%;
+height:100%;
+position: relative;
+z-index: -1;
+}
+.check{
+    width:10% ;
+    height: 180px;
+    padding-top: 20px;
 background-color: aliceblue;
 border-radius: 1px;
-} */
+position: relative;
+top: 280px;
+z-index: 2;
+}
+.qwert{
+ position: relative; 
+ top: 80px; 
+ transition: top 4s; 
+}
+.check h6{
+    margin: 3px 0;
+}
 .friton1{
     width: 70%;
     border: 2px solid red;
     margin-top:10px ;
+    position: relative;
     z-index: 1;
 }
 .friton2{
@@ -32,28 +60,27 @@ border-radius: 1px;
     height: 5px;
     border: 2px solid red;
     border-top: none;
-    margin-bottom: 20px;
     position: relative;
     z-index: 3;
 }
-.fri{
+.fri1{
     width: 100%;
-    height: 70%;
+    height: 94%;
+    border-radius: 0 0 5px 5px ;
+   position: relative;
+   z-index: 3;
+   background-color: antiquewhite;
 }
-.fri input{
+.fri1 input{
     width: 90%;
    margin:10px;
 }
 .delta {
     margin: 2px 1.7px;
-   
+
 }
 
-.fri button {
-width: 30%;
+.fri1 button {
+width: 29%;
 height: 15%;
-}
-.oplata{
-
-    margin: 0 30px;
 }
